--- a/api-lambda-sm/requirements.txt
+++ b/api-lambda-sm/requirements.txt
@@ -1,6 +1,2 @@
-aws-cdk.aws-events
-aws-cdk.aws-events-targets
-aws-cdk.aws-lambda
-aws-cdk.cdk
-aws-cdk.aws-iam
-aws-cdk.aws-apigateway
+aws-cdk-lib==2.76.0
+constructs>=10.0.0,<11.0.0
