--- a/auto-model-deploy/requirements.txt
+++ b/auto-model-deploy/requirements.txt
@@ -1,7 +1,3 @@
-aws-cdk.aws-events
-aws-cdk.aws-events-targets
-aws-cdk.aws-lambda
-aws-cdk.cdk
-aws-cdk.aws-iam
-aws-cdk.aws-s3
+aws-cdk-lib==2.76.0
+constructs>=10.0.0,<11.0.0
 boto3
