--- a/cron-train/requirements.txt
+++ b/cron-train/requirements.txt
@@ -1,8 +1,4 @@
-aws-cdk.aws-events
-aws-cdk.aws-events-targets
-aws-cdk.aws-lambda
-aws-cdk.cdk
-aws-cdk.aws-iam
-aws-cdk.aws-sagemaker
+aws-cdk-lib==2.76.0
+constructs>=10.0.0,<11.0.0
 boto3
 sagemaker
