--- a/stepfn-batch/requirements.txt
+++ b/stepfn-batch/requirements.txt
@@ -1,6 +1,3 @@
-aws-cdk.cdk
-
-aws-cdk.aws-stepfunctions
-aws-cdk.aws-stepfunctions-tasks
-aws-cdk.aws-lambda
+aws-cdk-lib==2.76.0
+constructs>=10.0.0,<11.0.0
 
